<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joshellen.thebeerguru.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:id="@+id/tv_title1"
        android:fontFamily="cursive"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/beer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title2"
        tools:text="BEER"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:layout_marginStart="48dp"
        android:layout_alignTop="@+id/tv_title1"
        android:layout_alignEnd="@+id/tv_title3" />

    <TextView
        android:text="@string/guru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title3"
        android:fontFamily="sans-serif"
        android:layout_marginStart="48dp"
        android:layout_below="@+id/tv_title2"
        android:layout_toEndOf="@+id/tv_title1" />

    <Button
        android:text="@string/flavor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_flavor"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="bFlavorClicked"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:text="@string/style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_style"
        android:layout_below="@+id/b_flavor"
        android:layout_alignStart="@+id/b_flavor"
        android:layout_marginTop="14dp"
        android:onClick="bStyleClicked"
        android:fontFamily="sans-serif-condensed" />

    <Button
        android:text="@string/brewery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/b_brewery"
        android:layout_above="@+id/b_flavor"
        android:layout_alignStart="@+id/b_flavor"
        android:layout_marginBottom="11dp"
        android:onClick="bBreweryClicked"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:text="@string/copyright_2017_by_the_beer_guru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_copyright"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/browse_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_header_title"
        android:fontFamily="casual"
        android:textSize="18sp"
        android:layout_above="@+id/b_brewery"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp" />

    <TextView
        android:text="@string/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_instructions"
        android:layout_below="@+id/b_style"
        android:layout_marginTop="38dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/join_our_mailing_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_mailing_list"
        android:textAlignment="center"
        android:layout_below="@+id/tv_instructions"
        android:layout_alignParentStart="true" />

</RelativeLayout>
