<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Style Category Text View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tv_header"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/select_a_sub_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_sub_header"
        android:fontFamily="casual"
        android:layout_below="@+id/tv_header"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_featured"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/brewery_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/brewery_recycler_view"
        android:layout_below="@+id/tv_featured"
        android:text="@string/beers_with_additives"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="180dp"
        android:layout_height="195dp"
        android:layout_alignStart="@+id/brewery_recycler_view"
        android:layout_below="@+id/tv_sub_header">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sub_header"
            android:layout_toStartOf="@+id/tv_featured"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton1"
            android:layout_below="@+id/radioButton1"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton3"
            android:layout_below="@+id/radioButton3"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton5"
            android:layout_below="@+id/radioButton5"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton7"
            android:layout_below="@+id/radioButton7"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton9"
            android:layout_below="@+id/radioButton9"
            android:layout_weight="1"
            android:text="RadioButton" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="186dp"
        android:layout_height="195dp"
        android:layout_alignEnd="@+id/brewery_recycler_view"
        android:layout_below="@+id/tv_sub_header">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/radioButton1"
            android:layout_alignBottom="@+id/radioButton1"
            android:layout_alignStart="@+id/radioButton4"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton10"
            android:layout_below="@+id/radioButton6"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton6"
            android:layout_below="@+id/radioButton2"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton8"
            android:layout_below="@+id/radioButton4"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radioButton12"
            android:layout_below="@+id/radioButton8"
            android:layout_weight="1"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/brewery_recycler_view"
            android:layout_below="@+id/radioButton10"
            android:layout_marginEnd="60dp"
            android:layout_weight="1"
            android:text="RadioButton" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch_only_my_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignStart="@+id/radioGroup2" />

    <TextView
        android:id="@+id/tv_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/switch_only_my_state"
        android:layout_alignBottom="@+id/switch_only_my_state"
        android:layout_toEndOf="@+id/switch_only_my_state"
        android:text="@string/only_mi_beers"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textStyle="bold" />

</RelativeLayout>